Add Required Objects & Enums
Objects:
     * Doctor - Object for Store Doctor Details
     * Medication - Object for Store Medication Details
     * Patient - Object for Store Patient Details & Their Medication

Enums:
     * Medicine - We are Decided to Limit Only 3 Medicines

--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -92,6 +92,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Enums\Medicine.vb" />
+    <Compile Include="Classes\Objects\Doctor.vb" />
+    <Compile Include="Classes\Objects\Medication.vb" />
+    <Compile Include="Classes\Objects\Patient.vb" />
     <Compile Include="Dialogs\frm_Login.Designer.vb">
       <DependentUpon>frm_Login.vb</DependentUpon>
     </Compile>
