Init Database Functions & Implement Fetch Function for Doctors Table

--- a/Medicine Dispenser - Windows Client/App.config
+++ b/Medicine Dispenser - Windows Client/App.config
@@ -13,6 +13,18 @@
             <setting name="Skin" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ServerAddresss" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DatabaseName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value />
+            </setting>
         </Medicine_Dispenser___Windows_Client.My.MySettings>
     </userSettings>
 </configuration>
