--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -98,6 +98,7 @@
     <Compile Include="Classes\Objects\Doctor.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
     <Compile Include="Classes\Objects\Patient.vb" />
+    <Compile Include="Classes\Utils\Encryption.vb" />
     <Compile Include="Dialogs\frm_Login.Designer.vb">
       <DependentUpon>frm_Login.vb</DependentUpon>
     </Compile>
