--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -105,6 +105,12 @@
     <Compile Include="Dialogs\frm_Login.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Dialogs\ServerSettings.Designer.vb">
+      <DependentUpon>ServerSettings.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\ServerSettings.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frm_Main.Designer.vb">
       <DependentUpon>frm_Main.vb</DependentUpon>
     </Compile>
@@ -133,6 +139,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Dialogs\frm_Login.resx">
       <DependentUpon>frm_Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\ServerSettings.resx">
+      <DependentUpon>ServerSettings.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="My Project\Resources.resx">
