Login: Load Users (Doctors) List From Server

--- a/Medicine Dispenser - Windows Client/App.config
+++ b/Medicine Dispenser - Windows Client/App.config
@@ -25,6 +25,9 @@
             <setting name="Password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastUser" serializeAs="String">
+                <value>-1</value>
+            </setting>
         </Medicine_Dispenser___Windows_Client.My.MySettings>
     </userSettings>
 </configuration>
