--- a/Medicine Dispenser - Windows Client/My Project/Settings.settings
+++ b/Medicine Dispenser - Windows Client/My Project/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LastUser" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">-1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
