--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Classes\Database\Common.vb" />
     <Compile Include="Classes\Database\Doctors.vb" />
+    <Compile Include="Classes\Database\Patients.vb" />
     <Compile Include="Classes\Enums\Medicine.vb" />
     <Compile Include="Classes\Objects\Doctor.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
