--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -99,6 +99,7 @@
     <Compile Include="Classes\Database\Doctors.vb" />
     <Compile Include="Classes\Database\Patients.vb" />
     <Compile Include="Classes\Enums\Medicine.vb" />
+    <Compile Include="Classes\Enums\Mode.vb" />
     <Compile Include="Classes\Objects\Doctor.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
     <Compile Include="Classes\Objects\Patient.vb" />
