--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -95,6 +95,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Common.vb" />
     <Compile Include="Classes\Database\Common.vb" />
     <Compile Include="Classes\Database\Doctors.vb" />
     <Compile Include="Classes\Database\Patients.vb" />
@@ -110,6 +111,12 @@
       <DependentUpon>frm_Login.vb</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\frm_Login.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\frm_StringInputBox.Designer.vb">
+      <DependentUpon>frm_StringInputBox.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\frm_StringInputBox.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Dialogs\ServerSettings.Designer.vb">
@@ -146,6 +153,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Dialogs\frm_Login.resx">
       <DependentUpon>frm_Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\frm_StringInputBox.resx">
+      <DependentUpon>frm_StringInputBox.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\ServerSettings.resx">
       <DependentUpon>ServerSettings.vb</DependentUpon>
