--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -113,6 +113,12 @@
     <Compile Include="Dialogs\frm_Login.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Dialogs\frm_Patient.Designer.vb">
+      <DependentUpon>frm_Patient.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\frm_Patient.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Dialogs\frm_StringInputBox.Designer.vb">
       <DependentUpon>frm_StringInputBox.vb</DependentUpon>
     </Compile>
@@ -153,6 +159,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Dialogs\frm_Login.resx">
       <DependentUpon>frm_Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\frm_Patient.resx">
+      <DependentUpon>frm_Patient.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\frm_StringInputBox.resx">
       <DependentUpon>frm_StringInputBox.vb</DependentUpon>
