--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -107,6 +107,12 @@
     <Compile Include="Classes\Utils\Compression.vb" />
     <Compile Include="Classes\Utils\Encryption.vb" />
     <Compile Include="Classes\Utils\Serializer.vb" />
+    <Compile Include="Dialogs\frm_Capture.Designer.vb">
+      <DependentUpon>frm_Capture.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\frm_Capture.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Dialogs\frm_Doctor.Designer.vb">
       <DependentUpon>frm_Doctor.vb</DependentUpon>
     </Compile>
@@ -163,6 +169,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Dialogs\frm_Capture.resx">
+      <DependentUpon>frm_Capture.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\frm_Doctor.resx">
       <DependentUpon>frm_Doctor.vb</DependentUpon>
     </EmbeddedResource>
