Project: Add & Ignore Keys Class

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ paket-files/
 __pycache__/
 *.pyc
 /Medicine Dispenser - Windows Client/My Project/licenses.licx
+/Medicine Dispenser - Windows Client/Classes/Keys.vb
