--- a/Medicine Dispenser - Windows Client/App.config
+++ b/Medicine Dispenser - Windows Client/App.config
@@ -1,29 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Medicine_Dispenser___Windows_Client.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Medicine_Dispenser___Windows_Client.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <userSettings>
         <Medicine_Dispenser___Windows_Client.My.MySettings>
             <setting name="Skin" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ServerAddresss" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DatabaseName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Username" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="LastUser" serializeAs="String">
                 <value>-1</value>
