--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -105,6 +105,7 @@
     <Compile Include="Classes\Database\Patients.vb" />
     <Compile Include="Classes\Enums\Medicine.vb" />
     <Compile Include="Classes\Enums\Mode.vb" />
+    <Compile Include="Classes\Enums\ProgramStates.vb" />
     <Compile Include="Classes\Keys.vb" />
     <Compile Include="Classes\Objects\Doctor.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
