Objects: Add 'MedicationScheduler' Object

--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -109,6 +109,7 @@
     <Compile Include="Classes\Keys.vb" />
     <Compile Include="Classes\Objects\Doctor.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
+    <Compile Include="Classes\Objects\MedicationScheduler.vb" />
     <Compile Include="Classes\Objects\Patient.vb" />
     <Compile Include="Classes\Utils\Compression.vb" />
     <Compile Include="Classes\Utils\Encryption.vb" />
