Objects: Add HandPlaced Event Arg

--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -108,6 +108,7 @@
     <Compile Include="Classes\Enums\ProgramStates.vb" />
     <Compile Include="Classes\Keys.vb" />
     <Compile Include="Classes\Objects\Doctor.vb" />
+    <Compile Include="Classes\Objects\HandPlacedEventArgs.vb" />
     <Compile Include="Classes\Objects\Medication.vb" />
     <Compile Include="Classes\Objects\MedicationScheduler.vb" />
     <Compile Include="Classes\Objects\Patient.vb" />
