Components: Implement Dispenser Device Component

--- a/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -100,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Common.vb" />
+    <Compile Include="Classes\Components\DispenserDevice.Designer.vb">
+      <DependentUpon>DispenserDevice.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Components\DispenserDevice.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\Database\Common.vb" />
     <Compile Include="Classes\Database\Doctors.vb" />
     <Compile Include="Classes\Database\Patients.vb" />
@@ -189,6 +195,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Classes\Components\DispenserDevice.resx">
+      <DependentUpon>DispenserDevice.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\frm_Capture.resx">
       <DependentUpon>frm_Capture.vb</DependentUpon>
     </EmbeddedResource>
