--- a/windows-client/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
+++ b/windows-client/Medicine Dispenser - Windows Client/Medicine Dispenser - Windows Client.vbproj
@@ -16,7 +16,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -171,6 +171,12 @@
     <Compile Include="frm_Main.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frm_Splash.Designer.vb">
+      <DependentUpon>frm_Splash.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frm_Splash.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -217,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Main.resx">
       <DependentUpon>frm_Main.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Splash.resx">
+      <DependentUpon>frm_Splash.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="My Project\Resources.resx">
